# sqlx

./: Cargo.toml  LICENSE  README.md
src/: app_config.rs  cli.rs  connection.rs  drivers.rs  main.rs
src/commands/: add_connection.rs  list_connections.rs  list_drivers.rs  mod.rs  remove_connection.rs  run_sql_file.rs
src/drivers/: drivers.rs  mod.rs  postgresql_driver.rs
