[package]
name = "sqlx"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
clap = { version = "4.5.54", features = ["derive"] }
ctor = "0.6.3"
directories = "6.0.0"
postgres = { version = "0.19.12", features = [
    "with-uuid-1",
    "with-chrono-0_4",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tabled = "0.20.0"
uuid = { version = "1.19.0", features = ["v4"] }
